# Amawk

./: Cargo.toml  LICENSE  README.md  example.yml
src/: main.rs
