[package]
name = "amawk"
version = "0.1.0"
authors = ["scifi6546 <scifi6546@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rand = "0.8"
clap = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"